  and updated the documentation regarding newlines. Implemented by Jon Swartz.

- Removed repetitive boilerplate documentation from each output
  class. Implemented by Jon Swartz.

- The level_names and level_numbers used internally are now computed once and
  shared between output objects. Implemented by Jon Swartz.

- Updated repo url - now at http://hg.urth.org/hg/Log-Dispatch

2.22 Nov 11, 2008

- Fixed a bug where Log::Dispatch::Email would die when it tried to
  log under taint mode. Patch by Neil Hemingway. RT #40042.

- Fixed a misuse of warnings::enabled(). Reported by Darian
  Patrick. RT #39784.

- Syslog logging now requires Sys::Syslog 0.16+.

- If you don't pass a socket argument to Log::Dispatch::Syslog, it
  does not call Sys::Syslog::setlogsock(), which is the preferred
  option for portability.

* If any of the syslog calls die, this is trapped and the error is
  output as a warning if warnings are on. This is mostly a workaround
  for Sys::Sylog not handling utf-8. RT #35270 & #37397.

  This isn't backwards-compatible, but it's probably wrong for the
  logging code to die because it can't log (even though some other
  output modules still do).


2.21 Feb 6, 2008

- Added log_and_die() and log_and_croak() methods. Patch by Yuval
  Kogman.


2.20 Nov 2, 2007

- One of the tests failed on Perl 5.6.x. Thanks to Slaven Rezic for
  the report.


2.19 Nov 1, 2007

- Switched to providing a traditional Makefile.PL as well as a
  Build.PL file. RT #27208.

- When permissions are specified for a Log::Dispatch::File object,
  don't try to chmod the file unless the permissions of the file
  differ from what the file already has. Based on a patch by Kevin. RT
  #28151.

- Require at least Perl 5.6.0.

- Remove the tests for the email sending and exit codes, since the
  test had a heisenbug I could not understand. I _think_ the code in
  the email modules is correct, but the test isn't proving anything.
