@@ -23,6 +23,10 @@
 
 - Updated repo url - now at http://hg.urth.org/hg/Log-Dispatch
 
+- Explicitly depend on Sys::Syslog 0.16.
+
+- Added warn as a synonym for warning. RT #44821. Requested by Dylan Martin.
+
 2.22 Nov 11, 2008
 
 - Fixed a bug where Log::Dispatch::Email would die when it tried to
